content/contracts/4.x/api/token/ERC777.mdx
---
title: "ERC777"
description: "Smart contract ERC777 utilities and implementations"
---

**🔥 CAUTION**\
As of v4.9, OpenZeppelin’s implementation of ERC-777 is deprecated and will be removed in the next major release.

This set of interfaces and contracts are all related to the [ERC777 token standard](https://eips.ethereum.org/EIPS/eip-777).

<Callout>
For an overview of ERC777 tokens and a walk through on how to create a token contract read our [ERC777 guide](ROOT:erc777.adoc).
</Callout>

The token behavior itself is implemented in the core contracts: [`IERC777`](#IERC777), [`ERC777`](#ERC777).

Additionally there are interfaces used to develop contracts that react to token movements: [`IERC777Sender`](#IERC777Sender), [`IERC777Recipient`](#IERC777Recipient).

## Core

[`IERC777`](#IERC777)

[`ERC777`](#ERC777)

## Hooks

[`IERC777Sender`](#IERC777Sender)

[`IERC777Recipient`](#IERC777Recipient)

## Presets

These contracts are preconfigured combinations of features. They can be used through inheritance or as models to copy and paste their source code.

[`ERC777PresetFixedSupply`](#ERC777PresetFixedSupply)

<a id="ERC777"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC777` 

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC777/ERC777.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC777/ERC777.sol";
```

Implementation of the [`IERC777`](#IERC777) interface.

This implementation is agnostic to the way tokens are created. This means
that a supply mechanism has to be added in a derived contract using [`ERC1155._mint`](ERC1155#ERC1155-_mint-address-uint256-uint256-bytes-).

Support for ERC20 is included in this contract, as specified by the EIP: both
the ERC777 and ERC20 interfaces can be safely used when interacting with it.
Both [`IERC777.Sent`](#IERC777-Sent-address-address-address-uint256-bytes-bytes-) and [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) events are emitted on token
movements.

Additionally, the [`IERC777.granularity`](#IERC777-granularity--) value is hard-coded to `1`, meaning that there
are no special restrictions in the amount of tokens that created, moved, or
destroyed. This makes integration with ERC20 applications seamless.

CAUTION: This file is deprecated as of v4.9 and will be removed in the next major release.

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [constructor(name_, symbol_, defaultOperators_)](#ERC777-constructor-string-string-address---)
- [name()](#ERC777-name--)
- [symbol()](#ERC777-symbol--)
- [decimals()](#ERC777-decimals--)
- [granularity()](#ERC777-granularity--)
- [totalSupply()](#ERC777-totalSupply--)
- [balanceOf(tokenHolder)](#ERC777-balanceOf-address-)
- [send(recipient, amount, data)](#ERC777-send-address-uint256-bytes-)
- [transfer(recipient, amount)](#ERC777-transfer-address-uint256-)
- [burn(amount, data)](#ERC777-burn-uint256-bytes-)
- [isOperatorFor(operator, tokenHolder)](#ERC777-isOperatorFor-address-address-)
- [authorizeOperator(operator)](#ERC777-authorizeOperator-address-)
- [revokeOperator(operator)](#ERC777-revokeOperator-address-)
- [defaultOperators()](#ERC777-defaultOperators--)
- [operatorSend(sender, recipient, amount, data, operatorData)](#ERC777-operatorSend-address-address-uint256-bytes-bytes-)
- [operatorBurn(account, amount, data, operatorData)](#ERC777-operatorBurn-address-uint256-bytes-bytes-)
- [allowance(holder, spender)](#ERC777-allowance-address-address-)
- [approve(spender, value)](#ERC777-approve-address-uint256-)
- [transferFrom(holder, recipient, amount)](#ERC777-transferFrom-address-address-uint256-)
- [_mint(account, amount, userData, operatorData)](#ERC777-_mint-address-uint256-bytes-bytes-)
- [_mint(account, amount, userData, operatorData, requireReceptionAck)](#ERC777-_mint-address-uint256-bytes-bytes-bool-)
- [_send(from, to, amount, userData, operatorData, requireReceptionAck)](#ERC777-_send-address-address-uint256-bytes-bytes-bool-)
- [_burn(from, amount, data, operatorData)](#ERC777-_burn-address-uint256-bytes-bytes-)
- [_approve(holder, spender, value)](#ERC777-_approve-address-address-uint256-)
- [_spendAllowance(owner, spender, amount)](#ERC777-_spendAllowance-address-address-uint256-)
- [_beforeTokenTransfer(operator, from, to, amount)](#ERC777-_beforeTokenTransfer-address-address-address-uint256-)
#### IERC20
#### IERC777
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### IERC20
- [Transfer(from, to, value)](#IERC20-Transfer-address-address-uint256-)
- [Approval(owner, spender, value)](#IERC20-Approval-address-address-uint256-)
#### IERC777
- [Minted(operator, to, amount, data, operatorData)](#IERC777-Minted-address-address-uint256-bytes-bytes-)
- [Burned(operator, from, amount, data, operatorData)](#IERC777-Burned-address-address-uint256-bytes-bytes-)
- [AuthorizedOperator(operator, tokenHolder)](#IERC777-AuthorizedOperator-address-address-)
- [RevokedOperator(operator, tokenHolder)](#IERC777-RevokedOperator-address-address-)
- [Sent(operator, from, to, amount, data, operatorData)](#IERC777-Sent-address-address-address-uint256-bytes-bytes-)
</div>
</div>

<a id="ERC777-constructor-string-string-address---"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">constructor(string name_, string symbol_, address[] defaultOperators_)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-constructor-string-string-address---">#</a>
</div>
</div>
<div className="px-4">

`defaultOperators` may be an empty array.

</div>
</div>

<a id="ERC777-name--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">name() → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-name--">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.name`](#IERC777-name--).

</div>
</div>

<a id="ERC777-symbol--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">symbol() → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-symbol--">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.symbol`](#IERC777-symbol--).

</div>
</div>

<a id="ERC777-decimals--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">decimals() → uint8</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-decimals--">#</a>
</div>
</div>
<div className="px-4">

See [`ERC20.decimals`](ERC20#ERC20-decimals--).

Always returns 18, as per the
[ERC777 EIP](https://eips.ethereum.org/EIPS/eip-777#backward-compatibility).

</div>
</div>

<a id="ERC777-granularity--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">granularity() → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-granularity--">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.granularity`](#IERC777-granularity--).

This implementation always returns `1`.

</div>
</div>

<a id="ERC777-totalSupply--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">totalSupply() → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-totalSupply--">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.totalSupply`](#IERC777-totalSupply--).

</div>
</div>

<a id="ERC777-balanceOf-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">balanceOf(address tokenHolder) → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-balanceOf-address-">#</a>
</div>
</div>
<div className="px-4">

Returns the amount of tokens owned by an account (`tokenHolder`).

</div>
</div>

<a id="ERC777-send-address-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">send(address recipient, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-send-address-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.send`](#IERC777-send-address-uint256-bytes-).

Also emits a [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) event for ERC20 compatibility.

</div>
</div>

<a id="ERC777-transfer-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">transfer(address recipient, uint256 amount) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-transfer-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC20.transfer`](ERC20#IERC20-transfer-address-uint256-).

Unlike `send`, `recipient` is _not_ required to implement the [`IERC777Recipient`](#IERC777Recipient)
interface if it is a contract.

Also emits a [`IERC777.Sent`](#IERC777-Sent-address-address-address-uint256-bytes-bytes-) event.

</div>
</div>

<a id="ERC777-burn-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">burn(uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-burn-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.burn`](#IERC777-burn-uint256-bytes-).

Also emits a [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) event for ERC20 compatibility.

</div>
</div>

<a id="ERC777-isOperatorFor-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">isOperatorFor(address operator, address tokenHolder) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-isOperatorFor-address-address-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.isOperatorFor`](#IERC777-isOperatorFor-address-address-).

</div>
</div>

<a id="ERC777-authorizeOperator-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">authorizeOperator(address operator)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-authorizeOperator-address-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.authorizeOperator`](#IERC777-authorizeOperator-address-).

</div>
</div>

<a id="ERC777-revokeOperator-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">revokeOperator(address operator)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-revokeOperator-address-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.revokeOperator`](#IERC777-revokeOperator-address-).

</div>
</div>

<a id="ERC777-defaultOperators--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">defaultOperators() → address[]</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-defaultOperators--">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.defaultOperators`](#IERC777-defaultOperators--).

</div>
</div>

<a id="ERC777-operatorSend-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">operatorSend(address sender, address recipient, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-operatorSend-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.operatorSend`](#IERC777-operatorSend-address-address-uint256-bytes-bytes-).

Emits [`IERC777.Sent`](#IERC777-Sent-address-address-address-uint256-bytes-bytes-) and [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) events.

</div>
</div>

<a id="ERC777-operatorBurn-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">operatorBurn(address account, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-operatorBurn-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC777.operatorBurn`](#IERC777-operatorBurn-address-uint256-bytes-bytes-).

Emits [`IERC777.Burned`](#IERC777-Burned-address-address-uint256-bytes-bytes-) and [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) events.

</div>
</div>

<a id="ERC777-allowance-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">allowance(address holder, address spender) → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-allowance-address-address-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC20.allowance`](ERC20#IERC20-allowance-address-address-).

Note that operator and allowance concepts are orthogonal: operators may
not have allowance, and accounts with allowance may not be operators
themselves.

</div>
</div>

<a id="ERC777-approve-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">approve(address spender, uint256 value) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-approve-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC20.approve`](ERC20#IERC20-approve-address-uint256-).

NOTE: If `value` is the maximum `uint256`, the allowance is not updated on
`transferFrom`. This is semantically equivalent to an infinite approval.

Note that accounts cannot have allowance issued by their operators.

</div>
</div>

<a id="ERC777-transferFrom-address-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">transferFrom(address holder, address recipient, uint256 amount) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777-transferFrom-address-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`IERC20.transferFrom`](ERC20#IERC20-transferFrom-address-address-uint256-).

NOTE: Does not update the allowance if the current allowance
is the maximum `uint256`.

Note that operator and allowance concepts are orthogonal: operators cannot
call `transferFrom` (unless they have allowance), and accounts with
allowance cannot call `operatorSend` (unless they are operators).

Emits [`IERC777.Sent`](#IERC777-Sent-address-address-address-uint256-bytes-bytes-), [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) and [`IERC20.Approval`](ERC20#IERC20-Approval-address-address-uint256-) events.

</div>
</div>

<a id="ERC777-_mint-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_mint(address account, uint256 amount, bytes userData, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_mint-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

Creates `amount` tokens and assigns them to `account`, increasing
the total supply.

If a send hook is registered for `account`, the corresponding function
will be called with the caller address as the `operator` and with
`userData` and `operatorData`.

See [`IERC777Sender`](#IERC777Sender) and [`IERC777Recipient`](#IERC777Recipient).

Emits [`IERC777.Minted`](#IERC777-Minted-address-address-uint256-bytes-bytes-) and [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) events.

Requirements

- `account` cannot be the zero address.
- if `account` is a contract, it must implement the [`IERC777Recipient`](#IERC777Recipient)
interface.

</div>
</div>

<a id="ERC777-_mint-address-uint256-bytes-bytes-bool-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_mint(address account, uint256 amount, bytes userData, bytes operatorData, bool requireReceptionAck)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_mint-address-uint256-bytes-bytes-bool-">#</a>
</div>
</div>
<div className="px-4">

Creates `amount` tokens and assigns them to `account`, increasing
the total supply.

If `requireReceptionAck` is set to true, and if a send hook is
registered for `account`, the corresponding function will be called with
`operator`, `data` and `operatorData`.

See [`IERC777Sender`](#IERC777Sender) and [`IERC777Recipient`](#IERC777Recipient).

Emits [`IERC777.Minted`](#IERC777-Minted-address-address-uint256-bytes-bytes-) and [`IERC20.Transfer`](ERC20#IERC20-Transfer-address-address-uint256-) events.

Requirements

- `account` cannot be the zero address.
- if `account` is a contract, it must implement the [`IERC777Recipient`](#IERC777Recipient)
interface.

</div>
</div>

<a id="ERC777-_send-address-address-uint256-bytes-bytes-bool-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_send(address from, address to, uint256 amount, bytes userData, bytes operatorData, bool requireReceptionAck)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_send-address-address-uint256-bytes-bytes-bool-">#</a>
</div>
</div>
<div className="px-4">

Send tokens

</div>
</div>

<a id="ERC777-_burn-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_burn(address from, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_burn-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

Burn tokens

</div>
</div>

<a id="ERC777-_approve-address-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_approve(address holder, address spender, uint256 value)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_approve-address-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

See [`ERC20._approve`](ERC20#ERC20-_approve-address-address-uint256-).

Note that accounts cannot have allowance issued by their operators.

</div>
</div>

<a id="ERC777-_spendAllowance-address-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_spendAllowance(address owner, address spender, uint256 amount)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_spendAllowance-address-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

Updates `owner` s allowance for `spender` based on spent `amount`.

Does not update the allowance amount in case of infinite allowance.
Revert if not enough allowance is available.

Might emit an [`IERC20.Approval`](ERC20#IERC20-Approval-address-address-uint256-) event.

</div>
</div>

<a id="ERC777-_beforeTokenTransfer-address-address-address-uint256-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">_beforeTokenTransfer(address operator, address from, address to, uint256 amount)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">internal</p>
<a className="peer" data-card href="ERC777-_beforeTokenTransfer-address-address-address-uint256-">#</a>
</div>
</div>
<div className="px-4">

Hook that is called before any token transfer. This includes
calls to [`ERC777.send`](#ERC777-send-address-uint256-bytes-), [`ERC20.transfer`](ERC20#ERC20-transfer-address-uint256-), [`ERC777.operatorSend`](#ERC777-operatorSend-address-address-uint256-bytes-bytes-), [`ERC20.transferFrom`](ERC20#ERC20-transferFrom-address-address-uint256-), minting and burning.

Calling conditions:

- when `from` and `to` are both non-zero, `amount` of ``from``'s tokens
will be to transferred to `to`.
- when `from` is zero, `amount` tokens will be minted for `to`.
- when `to` is zero, `amount` of ``from``'s tokens will be burned.
- `from` and `to` are never both zero.

To learn more about hooks, head to xref:ROOT:extending-contracts.adoc#using-hooks[Using Hooks].

</div>
</div>

<a id="IERC777"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `IERC777` 

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC777/IERC777.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC777/IERC777.sol";
```

Interface of the ERC777Token standard as defined in the EIP.

This contract uses the
[ERC1820 registry standard](https://eips.ethereum.org/EIPS/eip-1820) to let
token holders and recipients react to token movements by using setting implementers
for the associated interfaces in said registry. See [`IERC1820Registry`](../utils#IERC1820Registry) and
[`ERC1820Implementer`](../utils#ERC1820Implementer).

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [name()](#IERC777-name--)
- [symbol()](#IERC777-symbol--)
- [granularity()](#IERC777-granularity--)
- [totalSupply()](#IERC777-totalSupply--)
- [balanceOf(owner)](#IERC777-balanceOf-address-)
- [send(recipient, amount, data)](#IERC777-send-address-uint256-bytes-)
- [burn(amount, data)](#IERC777-burn-uint256-bytes-)
- [isOperatorFor(operator, tokenHolder)](#IERC777-isOperatorFor-address-address-)
- [authorizeOperator(operator)](#IERC777-authorizeOperator-address-)
- [revokeOperator(operator)](#IERC777-revokeOperator-address-)
- [defaultOperators()](#IERC777-defaultOperators--)
- [operatorSend(sender, recipient, amount, data, operatorData)](#IERC777-operatorSend-address-address-uint256-bytes-bytes-)
- [operatorBurn(account, amount, data, operatorData)](#IERC777-operatorBurn-address-uint256-bytes-bytes-)
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
- [Minted(operator, to, amount, data, operatorData)](#IERC777-Minted-address-address-uint256-bytes-bytes-)
- [Burned(operator, from, amount, data, operatorData)](#IERC777-Burned-address-address-uint256-bytes-bytes-)
- [AuthorizedOperator(operator, tokenHolder)](#IERC777-AuthorizedOperator-address-address-)
- [RevokedOperator(operator, tokenHolder)](#IERC777-RevokedOperator-address-address-)
- [Sent(operator, from, to, amount, data, operatorData)](#IERC777-Sent-address-address-address-uint256-bytes-bytes-)
</div>
</div>

<a id="IERC777-name--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">name() → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-name--">#</a>
</div>
</div>
<div className="px-4">

Returns the name of the token.

</div>
</div>

<a id="IERC777-symbol--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">symbol() → string</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-symbol--">#</a>
</div>
</div>
<div className="px-4">

Returns the symbol of the token, usually a shorter version of the
name.

</div>
</div>

<a id="IERC777-granularity--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">granularity() → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-granularity--">#</a>
</div>
</div>
<div className="px-4">

Returns the smallest part of the token that is not divisible. This
means all token operations (creation, movement and destruction) must have
amounts that are a multiple of this number.

For most token contracts, this value will equal 1.

</div>
</div>

<a id="IERC777-totalSupply--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">totalSupply() → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-totalSupply--">#</a>
</div>
</div>
<div className="px-4">

Returns the amount of tokens in existence.

</div>
</div>

<a id="IERC777-balanceOf-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">balanceOf(address owner) → uint256</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-balanceOf-address-">#</a>
</div>
</div>
<div className="px-4">

Returns the amount of tokens owned by an account (`owner`).

</div>
</div>

<a id="IERC777-send-address-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">send(address recipient, uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-send-address-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Moves `amount` tokens from the caller's account to `recipient`.

If send or receive hooks are registered for the caller and `recipient`,
the corresponding functions will be called with `data` and empty
`operatorData`. See [`IERC777Sender`](#IERC777Sender) and [`IERC777Recipient`](#IERC777Recipient).

Emits a [`IERC777.Sent`](#IERC777-Sent-address-address-address-uint256-bytes-bytes-) event.

Requirements

- the caller must have at least `amount` tokens.
- `recipient` cannot be the zero address.
- if `recipient` is a contract, it must implement the [`IERC777Recipient`](#IERC777Recipient)
interface.

</div>
</div>

<a id="IERC777-burn-uint256-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">burn(uint256 amount, bytes data)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-burn-uint256-bytes-">#</a>
</div>
</div>
<div className="px-4">

Destroys `amount` tokens from the caller's account, reducing the
total supply.

If a send hook is registered for the caller, the corresponding function
will be called with `data` and empty `operatorData`. See [`IERC777Sender`](#IERC777Sender).

Emits a [`IERC777.Burned`](#IERC777-Burned-address-address-uint256-bytes-bytes-) event.

Requirements

- the caller must have at least `amount` tokens.

</div>
</div>

<a id="IERC777-isOperatorFor-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">isOperatorFor(address operator, address tokenHolder) → bool</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-isOperatorFor-address-address-">#</a>
</div>
</div>
<div className="px-4">

Returns true if an account is an operator of `tokenHolder`.
Operators can send and burn tokens on behalf of their owners. All
accounts are their own operator.

See [`ERC777.operatorSend`](#ERC777-operatorSend-address-address-uint256-bytes-bytes-) and [`ERC777.operatorBurn`](#ERC777-operatorBurn-address-uint256-bytes-bytes-).

</div>
</div>

<a id="IERC777-authorizeOperator-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">authorizeOperator(address operator)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-authorizeOperator-address-">#</a>
</div>
</div>
<div className="px-4">

Make an account an operator of the caller.

See [`ERC777.isOperatorFor`](#ERC777-isOperatorFor-address-address-).

Emits an [`IERC777.AuthorizedOperator`](#IERC777-AuthorizedOperator-address-address-) event.

Requirements

- `operator` cannot be calling address.

</div>
</div>

<a id="IERC777-revokeOperator-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">revokeOperator(address operator)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-revokeOperator-address-">#</a>
</div>
</div>
<div className="px-4">

Revoke an account's operator status for the caller.

See [`ERC777.isOperatorFor`](#ERC777-isOperatorFor-address-address-) and [`ERC777.defaultOperators`](#ERC777-defaultOperators--).

Emits a [`IERC777.RevokedOperator`](#IERC777-RevokedOperator-address-address-) event.

Requirements

- `operator` cannot be calling address.

</div>
</div>

<a id="IERC777-defaultOperators--"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">defaultOperators() → address[]</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-defaultOperators--">#</a>
</div>
</div>
<div className="px-4">

Returns the list of default operators. These accounts are operators
for all token holders, even if [`ERC777.authorizeOperator`](#ERC777-authorizeOperator-address-) was never called on
them.

This list is immutable, but individual holders may revoke these via
[`ERC777.revokeOperator`](#ERC777-revokeOperator-address-), in which case [`ERC777.isOperatorFor`](#ERC777-isOperatorFor-address-address-) will return false.

</div>
</div>

<a id="IERC777-operatorSend-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">operatorSend(address sender, address recipient, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-operatorSend-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

Moves `amount` tokens from `sender` to `recipient`. The caller must
be an operator of `sender`.

If send or receive hooks are registered for `sender` and `recipient`,
the corresponding functions will be called with `data` and
`operatorData`. See [`IERC777Sender`](#IERC777Sender) and [`IERC777Recipient`](#IERC777Recipient).

Emits a [`IERC777.Sent`](#IERC777-Sent-address-address-address-uint256-bytes-bytes-) event.

Requirements

- `sender` cannot be the zero address.
- `sender` must have at least `amount` tokens.
- the caller must be an operator for `sender`.
- `recipient` cannot be the zero address.
- if `recipient` is a contract, it must implement the [`IERC777Recipient`](#IERC777Recipient)
interface.

</div>
</div>

<a id="IERC777-operatorBurn-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">operatorBurn(address account, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777-operatorBurn-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

Destroys `amount` tokens from `account`, reducing the total supply.
The caller must be an operator of `account`.

If a send hook is registered for `account`, the corresponding function
will be called with `data` and `operatorData`. See [`IERC777Sender`](#IERC777Sender).

Emits a [`IERC777.Burned`](#IERC777-Burned-address-address-uint256-bytes-bytes-) event.

Requirements

- `account` cannot be the zero address.
- `account` must have at least `amount` tokens.
- the caller must be an operator for `account`.

</div>
</div>

<a id="IERC777-Minted-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">Minted(address indexed operator, address indexed to, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC777-Minted-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>

<div className="px-4">

Emitted when `amount` tokens are created by `operator` and assigned to `to`.

Note that some additional user `data` and `operatorData` can be logged in the event.

</div>
</div>
<a id="IERC777-Burned-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">Burned(address indexed operator, address indexed from, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC777-Burned-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>

<div className="px-4">

Emitted when `operator` destroys `amount` tokens from `account`.

Note that some additional user `data` and `operatorData` can be logged in the event.

</div>
</div>
<a id="IERC777-AuthorizedOperator-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">AuthorizedOperator(address indexed operator, address indexed tokenHolder)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC777-AuthorizedOperator-address-address-">#</a>
</div>
</div>

<div className="px-4">

Emitted when `operator` is made operator for `tokenHolder`.

</div>
</div>
<a id="IERC777-RevokedOperator-address-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">RevokedOperator(address indexed operator, address indexed tokenHolder)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC777-RevokedOperator-address-address-">#</a>
</div>
</div>

<div className="px-4">

Emitted when `operator` is revoked its operator status for `tokenHolder`.

</div>
</div>
<a id="IERC777-Sent-address-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">Sent(address indexed operator, address indexed from, address indexed to, uint256 amount, bytes data, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">event</p>
<a className="peer" data-card href="IERC777-Sent-address-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>

<div className="px-4">

</div>
</div>

<a id="IERC777Recipient"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `IERC777Recipient` 

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC777/IERC777Recipient.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC777/IERC777Recipient.sol";
```

Interface of the ERC777TokensRecipient standard as defined in the EIP.

Accounts can be notified of [`IERC777`](#IERC777) tokens being sent to them by having a
contract implement this interface (contract holders can be their own
implementer) and registering it on the
[ERC1820 global registry](https://eips.ethereum.org/EIPS/eip-1820).

See [`IERC1820Registry`](../utils#IERC1820Registry) and [`ERC1820Implementer`](../utils#ERC1820Implementer).

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [tokensReceived(operator, from, to, amount, userData, operatorData)](#IERC777Recipient-tokensReceived-address-address-address-uint256-bytes-bytes-)
</div>
</div>

<a id="IERC777Recipient-tokensReceived-address-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">tokensReceived(address operator, address from, address to, uint256 amount, bytes userData, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777Recipient-tokensReceived-address-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

Called by an [`IERC777`](#IERC777) token contract whenever tokens are being
moved or created into a registered account (`to`). The type of operation
is conveyed by `from` being the zero address or not.

This call occurs _after_ the token contract's state is updated, so
[`IERC777.balanceOf`](#IERC777-balanceOf-address-), etc., can be used to query the post-operation state.

This function may revert to prevent the operation from being executed.

</div>
</div>

<a id="IERC777Sender"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `IERC777Sender` 

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC777/IERC777Sender.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC777/IERC777Sender.sol";
```

Interface of the ERC777TokensSender standard as defined in the EIP.

[`IERC777`](#IERC777) Token holders can be notified of operations performed on their
tokens by having a contract implement this interface (contract holders can be
their own implementer) and registering it on the
[ERC1820 global registry](https://eips.ethereum.org/EIPS/eip-1820).

See [`IERC1820Registry`](../utils#IERC1820Registry) and [`ERC1820Implementer`](../utils#ERC1820Implementer).

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [tokensToSend(operator, from, to, amount, userData, operatorData)](#IERC777Sender-tokensToSend-address-address-address-uint256-bytes-bytes-)
</div>
</div>

<a id="IERC777Sender-tokensToSend-address-address-address-uint256-bytes-bytes-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">tokensToSend(address operator, address from, address to, uint256 amount, bytes userData, bytes operatorData)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">external</p>
<a className="peer" data-card href="IERC777Sender-tokensToSend-address-address-address-uint256-bytes-bytes-">#</a>
</div>
</div>
<div className="px-4">

Called by an [`IERC777`](#IERC777) token contract whenever a registered holder's
(`from`) tokens are about to be moved or destroyed. The type of operation
is conveyed by `to` being the zero address or not.

This call occurs _before_ the token contract's state is updated, so
[`IERC777.balanceOf`](#IERC777-balanceOf-address-), etc., can be used to query the pre-operation state.

This function may revert to prevent the operation from being executed.

</div>
</div>

<a id="ERC777PresetFixedSupply"></a>

<div style={{marginTop: "4em"}} className="w-full flex flex-row items-center justify-between">

## `ERC777PresetFixedSupply` 

<a target="_blank" style={{marginTop: "1.5em"}} href="https://github.com/OpenZeppelin/openzeppelin-contracts/blob/v4.9.6/contracts/token/ERC777/presets/ERC777PresetFixedSupply.sol">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github-icon lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"/><path d="M9 18c-4.51 2-5-2-7-2"/></svg>
</a>

</div>

```solidity
import "@openzeppelin/contracts/token/ERC777/presets/ERC777PresetFixedSupply.sol";
```

[`ERC777`](#ERC777) token, including:

 - Preminted initial supply
 - No access control mechanism (for minting/pausing) and hence no governance

_Available since v3.4._

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Functions</h3>
<div className="font-mono">
- [constructor(name, symbol, defaultOperators, initialSupply, owner)](#ERC777PresetFixedSupply-constructor-string-string-address---uint256-address-)
#### ERC777
- [name()](#ERC777-name--)
- [symbol()](#ERC777-symbol--)
- [decimals()](#ERC777-decimals--)
- [granularity()](#ERC777-granularity--)
- [totalSupply()](#ERC777-totalSupply--)
- [balanceOf(tokenHolder)](#ERC777-balanceOf-address-)
- [send(recipient, amount, data)](#ERC777-send-address-uint256-bytes-)
- [transfer(recipient, amount)](#ERC777-transfer-address-uint256-)
- [burn(amount, data)](#ERC777-burn-uint256-bytes-)
- [isOperatorFor(operator, tokenHolder)](#ERC777-isOperatorFor-address-address-)
- [authorizeOperator(operator)](#ERC777-authorizeOperator-address-)
- [revokeOperator(operator)](#ERC777-revokeOperator-address-)
- [defaultOperators()](#ERC777-defaultOperators--)
- [operatorSend(sender, recipient, amount, data, operatorData)](#ERC777-operatorSend-address-address-uint256-bytes-bytes-)
- [operatorBurn(account, amount, data, operatorData)](#ERC777-operatorBurn-address-uint256-bytes-bytes-)
- [allowance(holder, spender)](#ERC777-allowance-address-address-)
- [approve(spender, value)](#ERC777-approve-address-uint256-)
- [transferFrom(holder, recipient, amount)](#ERC777-transferFrom-address-address-uint256-)
- [_mint(account, amount, userData, operatorData)](#ERC777-_mint-address-uint256-bytes-bytes-)
- [_mint(account, amount, userData, operatorData, requireReceptionAck)](#ERC777-_mint-address-uint256-bytes-bytes-bool-)
- [_send(from, to, amount, userData, operatorData, requireReceptionAck)](#ERC777-_send-address-address-uint256-bytes-bytes-bool-)
- [_burn(from, amount, data, operatorData)](#ERC777-_burn-address-uint256-bytes-bytes-)
- [_approve(holder, spender, value)](#ERC777-_approve-address-address-uint256-)
- [_spendAllowance(owner, spender, amount)](#ERC777-_spendAllowance-address-address-uint256-)
- [_beforeTokenTransfer(operator, from, to, amount)](#ERC777-_beforeTokenTransfer-address-address-address-uint256-)
#### IERC20
#### IERC777
</div>
</div>

<div className="bg-secondary p-4 rounded-md mb-6">
<h3 style={{ marginTop: "0"}}>Events</h3>
<div className="font-mono">
#### ERC777
#### IERC20
- [Transfer(from, to, value)](#IERC20-Transfer-address-address-uint256-)
- [Approval(owner, spender, value)](#IERC20-Approval-address-address-uint256-)
#### IERC777
- [Minted(operator, to, amount, data, operatorData)](#IERC777-Minted-address-address-uint256-bytes-bytes-)
- [Burned(operator, from, amount, data, operatorData)](#IERC777-Burned-address-address-uint256-bytes-bytes-)
- [AuthorizedOperator(operator, tokenHolder)](#IERC777-AuthorizedOperator-address-address-)
- [RevokedOperator(operator, tokenHolder)](#IERC777-RevokedOperator-address-address-)
- [Sent(operator, from, to, amount, data, operatorData)](#IERC777-Sent-address-address-address-uint256-bytes-bytes-)
</div>
</div>

<a id="ERC777PresetFixedSupply-constructor-string-string-address---uint256-address-"></a>

<div className="border rounded-md mb-4">
<div className="bg-secondary flex w-full justify-between px-4">
<p className="font-bold text-sm font-mono">constructor(string name, string symbol, address[] defaultOperators, uint256 initialSupply, address owner)</p>
<div className="flex flex-row items-center gap-2">
<p className="font-light text-sm">public</p>
<a className="peer" data-card href="ERC777PresetFixedSupply-constructor-string-string-address---uint256-address-">#</a>
</div>
</div>
<div className="px-4">

Mints `initialSupply` amount of token and transfers them to `owner`.

See [`ERC777.constructor`](#ERC777-constructor-string-string-address---).

</div>
</div>

